# arraki-client

./: Cargo.toml  README.md  askama.toml  package.json  tailwind.config.cjs  tsconfig.json
src/: router.rs
src/utils/: html.rs  lib.rs  nostr.rs
src/utils/js/: models.ts
src/utils/monaco-editor/: editor.main.css  editor.main.nls.js  javascript.js  loader.js  markdown.js  rust.js  tsMode.js  workerMain.js
src/utils/styles/: main.css  tailwind.css
src/utils/templates/: code-response.html  creator.html  editor.html  home.html  index.html  layout.html  notebook.html  post-notebook.html  profile.html  search.html  sidebar.html  staticCellDetail.html  staticCellList.html  userKeys.html
