  [package]
name = "htmx-front"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "router"
path = "src/router.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["markdown"] }
axum = { version = "0.6.20", features = ["macros"] }
chrono = "0.4.29"
futures = "0.3.28"
nostro2 = "0.1.4"
pulldown-cmark = "0.9.3"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = {version = "0.1.37", features = ["log"] }
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }
tungstenite = "0.20.0"

